cargo-features = ["edition2024"]

[package]
name = "UniPinoNft"
version = "0.1.0"
edition = "2024"

[features]
bpf-entrypoint = []


[dependencies]
# pinocchio toolset
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-pubkey = "0.3.0"
pinocchio-log = "0.5.1"

# IDL generator
shank = "0.4.6"

bytemuck = { version = "1.24.0", features = ["derive"] }

# nft metaplex
# mpl-core = "0.11.1"
