cargo-features = ["edition2024"]

[package]
name = "UniPinoNft"
version = "0.1.0"
edition = "2024"

[features]
bpf-entrypoint = []


[dependencies]
# pinocchio toolset
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-pubkey = "0.3.0"
pinocchio-token-2022 = "0.1.0"
pinocchio-log = "0.5.1"

thiserror = { version = "2", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics"] }

# IDL generator
shank = { version = "0.4.6", default-features = false }


[dev-dependencies]
# test
litesvm = "0.8.2"
