[package]
name = "UniPinoNft"
version = "0.1.0"
edition = "2021"

[features]
bpf-entrypoint = []


[dependencies]
# pinocchio toolset
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-pubkey = "0.3.0"
pinocchio-log = "0.5.1"

# IDL generator
shank = "0.4.6"

# customized util crate
utils = { path = "../utils" }
# nft metaplex
# mpl-core = "0.11.1"
